ops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsbackend
spec:
  selector:
    app: wsbackend
  ports:
    - name: websocket
      port: 80    
      targetPort: 8080
