ops/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wsbackend
spec:
  hosts:
    - "draw.kushan23.com"
  gateways:
    - ingress-gateway
  http:
    - match:
        - uri:
            prefix: /ws  # Ensure frontend connects to WebSocket at /ws
      route:
        - destination:
            host: wsbackend
            port:
              number: 80
